--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "meanify-co/laravel-obfuscator": "dev-master"
+        "meanify-co/laravel-obfuscator": "dev-master",
+        "guzzlehttp/guzzle": "^7.9",
+        "mailgun/mailgun-php": "^4.3",
+        "symfony/http-client": "^7.2",
+        "nyholm/psr7": "^1.8",
+        "sendgrid/sendgrid": "^8.1",
+        "sendgrid/php-http-client": "4.1.1",
+        "sendpulse/rest-api": "^2.0"
     },
     "require-dev": {
         "illuminate/support": "^10.0|^11.0|^12.0",
@@ -42,5 +49,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
+    }
 }
